chore: prepare 0.11.1 v91 test builds